# ChangeLog for app-laptop/tlp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

* tlp-9999-r1 (09 Mar 2016)
  09 Mar 2016; Andre Erdmann <dywi@mailerd.de> +tlp-9999-r1.ebuild:
  Reintroduce the live ebuild; note that EPREFIX is not supported.

  02 Sep 2015; Andre Erdmann <dywi@mailerd.de> -tlp-9999.ebuild:
  Remove outdated live ebuild.
  Recent upstream changes require an ebuild overhaul (9999-r1).
  Also, tlp-0.8 builds a more recent version than -9999
  (0.8: 0.8 + fix; 9999: devel==0.8, master is 0.8.900).

* tlp-0.8 (08 Aug 2015)
  08 Aug 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.8.ebuild:
  Latest upstream release.
  Note that the USB_DRIVER_BLACKLIST feature had to be removed because of
  systemd-udevd changes, use USB_BLACKLIST instead.
  Switched to the "openrc-run" run script (same as already used for -9999).
  Removed config file migration code, users upgrading from tlp <= 0.5
  need to edit /etc/tlp.conf and remove /etc/conf.d/tlp manually.

  13 Apr 2015; Andre Erdmann <dywi@mailerd.de>
  tlp-9999.ebuild, +files/tlp-init.openrc-r2:
  Changes hashbang in openrc init script from
  /sbin/runscript to /sbin/openrc-run.

* tlp-0.7-r3 (30 Mar 2015)
  30 Mar 2015; Andre Erdmann <dywi@mailerd.de>
  -tlp-0.7-r2.ebuild, +tlp-0.7-r3.ebuild:
  Fix: actually apply the patches mentioned in -r2.

* tlp-0.7-r2 (30 Mar 2015)
  30 Mar 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7-r2.ebuild:
  Add upstream patches for Issues #123, #124
  and add kernel config check for CONFIG_PM.

  30 Mar 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  CONFIG_PM_RUNTIME has been removed in linux 3.19,
  check for CONFIG_PM instead.

  10 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Add CONFIG_PM_RUNTIME to the list of required kernel options (CONFIG_CHECK).

*tlp-0.7-r1 (07 Feb 2015)
  07 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7-r1.ebuild,
  tlp-9999.ebuild: