@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Aug 2016; Andre Erdmann <dywi@mailerd.de> tlp-9999-r1.ebuild,
+  metadata.xml:
+  Update live ebuild: combined live/release-ver ebuild,
+  use optfeature for suggesting optional deps.
+
 * tlp-9999-r1 (09 Mar 2016)
   09 Mar 2016; Andre Erdmann <dywi@mailerd.de> +tlp-9999-r1.ebuild:
   Reintroduce the live ebuild; note that EPREFIX is not supported.
